# shop/openapi.yaml
@@ -25,6 +25,60 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/AddressInfo'
+    /api/default/address:
+        put:
+            tags:
+                - Shop
+            operationId: Shop_DefaultAddress
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/AddressReq'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/CheckResponse'
+    /api/delete/address:
+        post:
+            tags:
+                - Shop
+            operationId: Shop_DeleteAddress
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/AddressReq'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/CheckResponse'
+    /api/update/address:
+        put:
+            tags:
+                - Shop
+            operationId: Shop_UpdateAddress
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/UpdateAddressReq'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/CheckResponse'
     /api/users/captcha:
         get:
             tags:
@@ -110,6 +164,15 @@ components:
                 isDefault:
                     type: integer
                     format: int32
+        AddressReq:
+            type: object
+            properties:
+                id:
+                    type: integer
+                    format: int64
+                uid:
+                    type: integer
+                    format: int64
         CaptchaReply:
             type: object
             properties:
@@ -117,6 +180,11 @@ components:
                     type: string
                 picPath:
                     type: string
+        CheckResponse:
+            type: object
+            properties:
+                success:
+                    type: boolean
         CreateAddressReq:
             type: object
             properties:
@@ -176,6 +244,32 @@ components:
                     type: string
                 password:
                     type: string
+        UpdateAddressReq:
+            type: object
+            properties:
+                uid:
+                    type: integer
+                    format: int64
+                name:
+                    type: string
+                mobile:
+                    type: string
+                Province:
+                    type: string
+                City:
+                    type: string
+                Districts:
+                    type: string
+                address:
+                    type: string
+                postCode:
+                    type: string
+                isDefault:
+                    type: integer
+                    format: int32
+                id:
+                    type: integer
+                    format: int64
         UserDetailResponse:
             type: object
             properties:
